--- a/css/index.css
+++ b/css/index.css
@@ -91,11 +91,11 @@ select:focus {
   cursor: pointer;
 }
 
-main {
+/* main {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
-}
+} */
 
 .box {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
